set( ENKF_INSTALL_PREFIX "enkf" CACHE STRING "Prefix for installation of libenkf")

include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/src )
include_directories( ${CMAKE_CURRENT_BINARY_DIR}/src )
include_directories( ${libutil_build_path}) 
include_directories( ${libutil_src_path} )
include_directories( ${libecl_src_path} )
include_directories( ${librms_src_path} )
include_directories( ${libconfig_src_path} )
include_directories( ${libjob_queue_src_path} )
include_directories( ${libplot_src_path} )
include_directories( ${libanalysis_src_path} )
include_directories( ${libsched_src_path} )
include_directories( ${libgeometry_src_path} )

add_subdirectory( src )
add_subdirectory( applications/ert_tui )
